--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "master",
   "version": "0.0.1",
-  "description": "Base template for Fastify + authentication and user database",
+  "description": "Base template for Express + authentication and user database",
   "main": "app.js",
+  "type": "module",
   "scripts": {
+    "start": "node app.js",
+    "start:watch": "nodemon",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -11,7 +14,7 @@
     "url": "git+https://github.com/singletail/master.git"
   },
   "keywords": [
-    "fastify",
+    "express",
     "authentication",
     "template"
   ],
