--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "node": "16.16.0"
   },
   "scripts": {
-    "start": "cross-env NODE_ENV=development pm2 start ./src/index.js",
+    "start": "cross-env NODE_ENV=development pm2 start ./src/index.js --name=master",
     "dev": "cross-env NODE_ENV=development nodemon src/index.js",
     "test": "jest -i --colors --verbose --detectOpenHandles",
     "test:watch": "jest -i --watchAll",
@@ -36,13 +36,17 @@
   },
   "homepage": "https://github.com/singletail/master#readme",
   "dependencies": {
+    "api-error": "^0.1.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-validation": "^4.1.0",
+    "http-status": "^1.5.2",
     "mongoose": "^6.4.4",
     "morgan": "^1.10.0",
     "ws": "^8.8.0"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "eslint": "^8.19.0",
     "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.1",
